set up cron job to run once a day

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,5 +1,8 @@
 name: Fetch and update player data
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  schedule:
+      - cron: '0 0 * * *'
 
 permissions:
   contents: write
